<resources>

    <!--IMC APP-->
    <string name="app_name">MiPrimeraApp</string>
    <string name="pulsame">Pulsame</string>
    <string name="escribe_tu_nombre">Escribe tu nombre</string>
    <string name="SaludApp">SaludApp</string>
    <string name="height">Altura</string>
    <string name="male">hombre</string>
    <string name="_120_cm">120 cm</string>
    <string name="female">mujer</string>
    <string name="male_img">male_img</string>
    <string name="female_img">female_img</string>
    <string name="weight">peso</string>
    <string name="age">edad</string>
    <string name="todo">TODO</string>
    <string name="calculate">Calcular</string>
    <string name="result">Resultado</string>
    <string name="recalculate">Re-Calcular</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo Peso</string>
    <string name="description_bajo_peso">Estas por debajo de lo óptimo para tu peso y altura</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estas en lo óptimo para tu peso y altura</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estas por encima de lo óptimo para tu peso y altura</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estas MUY por encima de lo óptimo para tu peso y altura</string>
    <string name="IMCApp">IMCApp</string>
    <string name="desliza">desliza</string>

    <!--TODOApp-->
    <string name="TODOApp">TODO APP</string>
    <string name="todo_title">Bienvenido</string>
    <string name="todo_categories">Categorías</string>
    <string name="todo_tasks">Tareas</string>
    <string name="adicionar">Adicionar</string>
    <string name="todo_dialog_add_task">Añade La Tarea</string>
    <string name="todo_dialog_category_business">Negocios</string>
    <string name="todo_dialog_category_personal">Personal</string>
    <string name="todo_dialog_category_other">Otros</string>
    <string name="todo_dialog_add_task_button">Crear Tarea</string>

    <!--SuperHeroApp-->
    <string name="SuperHeroApp">Super Hero APP</string>
    <string name="imagensuperheroe">imagensuperheroe</string>
    <string name="intelligence">Intelligence</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>
    <string name="Settings">Configuraciones</string>
    <string name="dark_mode">Modo oscuro</string>
    <string name="activa_el_modo_oscuro_para_un_cambio_visual">Activa el modo oscuro para un cambio visual</string>
    <string name="icono_dark">Icono_dark</string>
    <string name="active_bluetooth">Activar Bluetooth</string>
    <string name="conecta_perifericos_sin_cables">Conecta perifericos sin cables</string>
    <string name="icono_de_bluetooth">icono de bluetooth</string>
    <string name="icono_de_volumen">icono_de_volumen</string>
    <string name="vibrar_en_las_llamadas">Vibrar en las llamadas</string>
    <string name="subir_el_volumen">Subir el volumen</string>


</resources>